Enhanced social bubble mechanics